# oomph-lib

./: .gitignore
demo_drivers/axisym_navier_stokes/axi_dynamic_cap/: .gitignore  Makefile.am  axi_dynamic_cap.cc  bo_height_control_singular_axisym_dynamic_cap_problem.h  bond_height_continuation_axisym_dynamic_cap_problem.h  ca_height_continuation_axisym_dynamic_cap_problem.h  ca_height_control_singular_axisym_dynamic_cap_problem.h  continuation_run.cc  create_parameter_files.cc  eigensolution_functions.h  free_surface_elements.h  full_continuation_problem.h  generate_single_test.zsh  generate_tests.zsh  height_continuation_problem.h  height_element.h  my_eigenproblem.h  parameter_functions.h  parameters.h  projectable_axisymmetric_Ttaylor_hood_elements.h  run_tests.cc  run_tests.h  run_tests.zsh  singular_axisym_dynamic_cap_problem.h  singular_axisym_navier_stokes_elements.h  singular_axisym_navier_stokes_solution_elements.h  solid_pressure_evaluation_elements.h  solid_singular_axisym_fluid_traction_elements.h  temp.h  test_grad_velocity.cc  test_problem.cc  test_utility.cc  timer.h  utility_functions.h  validate.sh
demo_drivers/axisym_navier_stokes/obtuse_corner_flow/: .gitignore  Makefile.am  axisym_sector_problem.h  dofs.txt  hijack_boundary.cc  hijack_region_axisym_sector_problem.h  my_element.h  region_axisym_sector_problem.h  singular_axisym_sector_problem.h  singular_region_axisym_sector_problem.h  singular_unstructured_axisym_sector_problem.h  singular_unstructured_sector_problem.h  soln.pvd  sprittles_region_axisym_sector_problem.h  unstructured_axisym_sector_problem.h  utility_functions.h  validate.sh
demo_drivers/hele_shaw/bubble/: Makefile.am  bubble_in_a_uniform_channel_lab_frame.cc  bubble_steady.cc  bubble_unsteady.cc  custom_hele_shaw_elements_with_integrals.h  hele_shaw_bubble_problem_with_integrals.h  hele_shaw_bubble_problem_with_integrals_moving_ref.h  hele_shaw_bubble_problem_with_integrals_perturbation.h  hele_shaw_bubble_problem_with_integrals_weakly.h  hele_shaw_interface_elements_with_integrals_weakly.h  validate.sh
demo_drivers/hele_shaw/bubble_in_a_uniform_channel/: Makefile.am  bubble_in_a_uniform_channel.cc  problem_parameter.h  (+4 more)
demo_drivers/integral/: Makefile.am  integral.cc  integral_tri.cc
demo_drivers/singularity/: Makefile.am  axisym_navier_stokes_with_singularity.h  axisym_sector_problem.h  eigensolution_functions.h  my_error_estimator.h  my_navier_stokes_elements_with_singularity.h  parameter_values.h  parse_arguments.h  run_tests.cc  singular_axisym_sector_problem.h  validate.sh
src/: Makefile.am
src/axisym_navier_stokes/: Makefile.am  Taxisym_navier_stokes_elements.cc  Taxisym_navier_stokes_elements.h  axisym_fluid_slip_elements.h  axisym_fluid_traction_elements.cc  axisym_fluid_traction_elements.h  axisym_navier_stokes_elements.cc  axisym_navier_stokes_elements.h  axisym_navier_stokes_flux_control_elements.h  axisym_navier_stokes_surface_power_elements.h  linearised_fsi_axisym_no_slip_bc_elements.h  refineable_axisym_navier_stokes_elements.cc  refineable_axisym_navier_stokes_elements.h  singular_axisym_fluid_traction_elements.h  singular_axisym_navier_stokes.h  singular_axisym_navier_stokes_elements.h
src/fluid_interface/: Makefile.am  constrained_volume_elements.h  fluid_interface_face_element.h  interface_contact_elements.cc  interface_contact_elements.h  interface_elements.cc  interface_elements.h  specific_node_update_interface_elements.h  specific_node_update_interface_face_elements.h  surfactant_transport_elements.cc
src/generic/: Makefile.am  Qelements.h  assembly_handler.cc  assembly_handler.h  complex_matrices.cc  complex_matrices.h  eigen_solver.h  element_with_error.h  elements.cc  elements.h  face_mesh_project.h  geom_objects.h  matrices.h  my_fold_handler.cc  my_fold_handler.h  nodes.h  oomph_definitions.cc  perturbed_spines.cc  perturbed_spines.h  problem.cc  problem.h  pseudosolid_node_update_elements.h  sample_point_parameters.cc  trilinos_eigen_solver.cc  trilinos_eigen_solver.h  unstructured_two_d_mesh_geometry_base.cc  unstructured_two_d_mesh_geometry_base.h
src/hele_shaw/: .gitignore  Makefile.am  Thele_shaw_elements.h  Thele_shaw_elements_with_integral.h  Tprojectable_hele_shaw_elements.h  hele_shaw.h  hele_shaw_elements.cc  hele_shaw_elements.h  hele_shaw_elements.template.cc  hele_shaw_equations.h  hele_shaw_equations_with_integral.h  hele_shaw_flux_elements.h  hele_shaw_flux_elements_with_inflow_integral.h  hele_shaw_interface_elements.h  hele_shaw_interface_elements_finger.h  hele_shaw_interface_elements_with_integrals.h  hele_shaw_parameter_converter.h  my_new_element.h  my_new_element_with_integrals.h  projectable_hele_shaw_element.h  projectable_hele_shaw_element.template.cc  projectable_hele_shaw_elements.h
src/integral/: Makefile.am  Tintegral_elements.h  integral.h
src/linear_elasticity/: Tlinear_elasticity_elements.cc  linear_elasticity_elements.cc  linear_elasticity_traction_elements.h
src/linear_wave/: Makefile.am
src/linearised_axisym_navier_stokes/: linearised_axisym_navier_stokes_elements.cc  linearised_axisym_navier_stokes_elements.h  multi_domain_linearised_axisym_navier_stokes_elements.h
src/meshes/: triangle_mesh.template.cc  triangle_mesh.template.h
src/navier_stokes/: Makefile.am  Tnavier_stokes_elements.cc  Tnavier_stokes_elements.h  eigensolution_functions.h  fluid_traction_elements.h  impose_impenetrability_element.h  impose_parallel_outflow_element.h  navier_stokes_elements.cc  navier_stokes_elements.h  navier_stokes_face_elements.h  navier_stokes_flux_control_elements.h  navier_stokes_preconditioners.h  point_pressure_evaluation_elements.h  pressure_evaluation_elements.h  refineable_navier_stokes_elements.cc  refineable_navier_stokes_elements.h  singular_fluid_traction_elements.h  singular_navier_stokes.h  singular_navier_stokes_elements.h  singular_navier_stokes_solution_elements.h  vorticity_smoother.h
src/ode/: ode_elements.h
src/solid/: Makefile.am  solid_traction_elements.cc  solid_traction_elements.h
src/volume/: volume_elements.cc  volume_elements.h
(+14418 files in other folders)
