SUBDIRS = \
	advection_diffusion \
	advection_diffusion_reaction \
	axisym_advection_diffusion \
	axisym_displ_based_foeppl_von_karman \
	axisym_foeppl_von_karman \
	axisym_linear_elasticity \
	axisym_navier_stokes \
	axisym_poroelasticity \
	axisym_spherical_solid \
	beam \
	biharmonic \
	constitutive \
	darcy \
	fluid_interface  \
	flux_transport \
	foeppl_von_karman \
	fourier_decomposed_helmholtz\
	generalised_newtonian_axisym_navier_stokes \
	generalised_newtonian_navier_stokes \
	generic \
	helmholtz \
	linear_elasticity \
	linear_wave \
	linearised_axisym_navier_stokes \
	linearised_navier_stokes \
	mesh_smoothing \
	meshes \
	multi_physics \
	navier_stokes \
	ode \
	pml_fourier_decomposed_helmholtz \
	pml_helmholtz \
	pml_time_harmonic_linear_elasticity \
	poisson \
	polar_navier_stokes \
	poroelasticity \
	rigid_body \
	shell \
	solid \
	space_time
	spherical_advection_diffusion \
	spherical_navier_stokes \
	steady_axisym_advection_diffusion \
	time_harmonic_fourier_decomposed_linear_elasticity \
	time_harmonic_linear_elasticity \
	unsteady_heat \
	womersley \
	young_laplace 

