noinst_PROGRAMS =   Drops_driver_code Multiple_solutions Branches_with_Q Branches_with_obstacle Transients Stability_version Half_domain_driver High_obstacle With_obstacle_stability Transients_to_breakup

Drops_driver_code_SOURCES = Drops_driver_code.cc
Drops_driver_code_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

Multiple_solutions_SOURCES = Multiple_solutions.cc
Multiple_solutions_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

Branches_with_Q_SOURCES = Branches_with_Q.cc
Branches_with_Q_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

Branches_with_obstacle_SOURCES = Branches_with_obstacle.cc
Branches_with_obstacle_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

Transients_SOURCES = Transients.cc
Transients_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

Transients_to_breakup_SOURCES = Transients_to_breakup.cc
Transients_to_breakup_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

Stability_version_SOURCES = Stability_version.cc
Stability_version_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

Half_domain_driver_SOURCES = Half_domain_driver.cc
Half_domain_driver_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

High_obstacle_SOURCES = High_obstacle.cc
High_obstacle_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

With_obstacle_stability_SOURCES = With_obstacle_stability.cc
With_obstacle_stability_LDADD  = -L@libdir@ -lconstitutive -lsolid -lgeneric -lfluid_interface $(EXTERNAL_LIBS) $(FLIBS)

# Include path for library headers: All library headers live in 
# the include directory which we specify with -I
INCLUDES = -I@includedir@  





